--- a/style.css
+++ b/style.css
@@ -3,3 +3,38 @@ body {
   height: 100%;
   margin: 0;
 }
+header{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+figure{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#featured-property p{
+  width: 800px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  padding-left: 20%;
+}
+#details{
+  background-color: red;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  
+}
+div{
+  padding-right: 10%;
+}
+header a{
+  background-color: grey;
+}
